[FREESTYLE] webapp et restapi