@@ -15,12 +15,21 @@ import javax.transaction.Transactional;
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
 
-import fr.commerces.microservices.catalog.categories.basic.CategoryManager;
+import org.apache.commons.lang3.RandomStringUtils;
+
+import com.neovisionaries.i18n.LanguageCode;
+
+import fr.commerces.microservices.catalog.categories.CategoryManager;
 import fr.commerces.microservices.catalog.categories.entity.Category;
 import fr.commerces.microservices.catalog.products.entity.Product;
 import fr.commerces.microservices.catalog.products.entity.ProductCategory;
+import fr.commerces.microservices.catalog.products.entity.ProductLang;
 import fr.commerces.microservices.catalog.products.model.ProductRelation;
 import fr.commerces.microservices.catalog.products.relationships.lang.ProductLangManager;
+import fr.commerces.microservices.catalog.products.relationships.lang.ProductLangMapper;
+import fr.commerces.microservices.catalog.products.relationships.pricing.ProductPricingMapper;
+import fr.commerces.microservices.catalog.products.relationships.shipping.ProductShippingMapper;
+import fr.commerces.microservices.catalog.products.relationships.stocks.ProductStockMapper;
 import fr.commerces.microservices.catalog.products.relationships.variations.ProductVariationManager;
 import fr.webmaker.annotation.ManagerInterceptor;
 import fr.webmaker.data.BaseResource;
@@ -54,6 +63,20 @@ public final class ProductManager {
 	@Inject
 	ProductVariationManager productVariationManager;
 	
+	@Inject
+	ProductPricingMapper pricingMapper;
+	
+	@Inject
+	ProductShippingMapper shippingMapper;
+	
+	@Inject
+	ProductStockMapper stockMapper;
+	
+	@Inject
+	ProductLangMapper langMapper;
+	
+
+	
 
 	/* ################ Opérations de lecture ################ */
 
@@ -78,52 +101,83 @@ public final class ProductManager {
 		return pagingData;
 	}
 	
-	/**
-	 * Obtenir tous les produits
-	 * 
-	 * @return
-	 */
-	public final @NotNull List<fr.webmaker.data.product.ProductCompositeData> findAll(@NotNull @Valid final PageRequest page,
-			@NotNull final Collection<@NotNull ProductRelation> inclusions) {
-		List<Product> values = Product.<Product>findAll()
-				.page(Page.of(page.getPage() - 1, page.getSize())).list();
-		Collection<Long> ids = values.stream()
+	
+	private @NotNull List<ProductCompositeData> wrap(Collection<Product> values, @NotNull final Collection<@NotNull ProductRelation> inclusions)
+	{
+		final Collection<Long> ids = values.stream()
 				.map(Product::getId)
 				.collect(Collectors.toList());
 		
-		boolean withLangs = inclusions.contains(ProductRelation.LANGS);
-		boolean withCategories = inclusions.contains(ProductRelation.CATEGORIES);
-		boolean withVariations = inclusions.contains(ProductRelation.VARIATIONS);
-		
 		// Langues
+		boolean withLangs = inclusions.contains(ProductRelation.LANGS);
 		Map<Long, List<ProductLangData>> langs = withLangs
 				? productLangManager.findByProductIds(ids)
 				: Map.of();
 		
 		// Catégories
+		boolean withCategories = inclusions.contains(ProductRelation.CATEGORIES);
 		Map<Long, List<CategoryData>> categories = withCategories
 				? categoryManager.findByProductIds(ids)
 				: Map.of();
 		
 		// Variations
+		boolean withVariations = inclusions.contains(ProductRelation.VARIATIONS);
 		Map<Long, List<ProductVariationData>> variations = withVariations
 				? productVariationManager.findByProductIds(ids)
 				: Map.of();
+				
+		boolean withPricins = inclusions.contains(ProductRelation.PRICING);
+		boolean withShipping = inclusions.contains(ProductRelation.SHIPPING);
 
 		// MAPPING ENTITY => DATA
 		return values.stream()
 				.map(entity -> {
 					Long id = entity.getId();
 					ProductCompositeData baseResource = mapper.wrapComposite(entity);
-							baseResource.setProductLangs(
-									Optional.ofNullable(langs.get(id)).orElse(Collections.emptyList()));
-							baseResource.setVariations(
-									Optional.ofNullable(variations.get(id)).orElse(Collections.emptyList()));
-							baseResource.setCategories(
-									Optional.ofNullable(categories.get(id)).orElse(Collections.emptyList()));
+					baseResource.setProductLangs(
+							withLangs 
+								? Optional.ofNullable(langs.get(id)).orElse(Collections.emptyList())
+								: null);
+					
+					baseResource.setVariations(
+							withVariations
+							? Optional.ofNullable(variations.get(id)).orElse(Collections.emptyList())
+							: null);
+				
+					baseResource.setCategories(
+							withCategories
+							? Optional.ofNullable(categories.get(id)).orElse(Collections.emptyList())
+							: null);
+					
+					
+					baseResource.setImageCover(null);
+					
+
+					baseResource.setPricing(withPricins ? pricingMapper.wrap(entity) : null);
+					baseResource.setShipping(withShipping ? shippingMapper.toData(entity) : null);
+					
 					return baseResource;
 				})
 				.collect(Collectors.toList());
+	}
+	
+	/**
+	 * Obtenir tous les produits
+	 * 
+	 * @return
+	 */
+	@NotNull
+	public final List<@NotNull ProductCompositeData> findAll(@NotNull @Valid final PageRequest page,
+			@NotNull final Collection<@NotNull ProductRelation> inclusions) {
+		
+		final List<Product> values = Product.<Product>findAll().page(Page.of(page.getPage() - 1, page.getSize())).list();
+		if(values.isEmpty())
+		{
+			return Collections.emptyList();
+		}
+		
+		return wrap(values, inclusions);
+		
 	}
 
 	/**
@@ -133,20 +187,11 @@ public final class ProductManager {
 	 * @return
 	 * @throws NotFoundException
 	 */
-	
-	public final @NotNull ProductCompositeData findById(final long productId, final Collection<ProductRelation> relationships) throws NotFoundException {
-		return Product.<Product>findByIdOptional(productId)
-				.map(entity -> {
-					ProductCompositeData data = mapper.wrapComposite(entity);
-							if (relationships.contains(ProductRelation.CATEGORIES)) {
-								data.setCategories(Optional
-										.ofNullable(categoryManager.findByProductIds(List.of(productId)).get(productId))
-										.orElse(Collections.emptyList()));
-							}
-					
-					return data;
-				})
-				.orElseThrow(() -> new NotFoundException(productId));
+	public final @NotNull ProductCompositeData findById(final long productId, @NotNull final Collection<@NotNull ProductRelation> relationships) {
+		Product product = Product.<Product>findByIdOptional(productId)
+			.orElseThrow(() -> new NotFoundException(productId));
+		
+		return wrap(List.of(product), relationships).get(0);
 	}
 	
 	/* ################ Opérations de création ################ */
@@ -159,10 +204,42 @@ public final class ProductManager {
 	 * @return
 	 */
 	@Transactional
-	public final @NotNull BaseResource createProduct(@NotNull @Valid final ProductData data) {
-		final Product product = mapper.unwrap(data);
-		product.persist();
+	public final @NotNull BaseResource createProduct(@NotNull @Valid final ProductCompositeData data) {
+		Product product = mapper.unwrap(data);	
+		if(product.getReference() == null)
+		{
+			product.setReference(RandomStringUtils.random(10, true, false));
+		}
+		
+		// ProductLangs
+		if(data.getProductLangs().isEmpty())
+		{
+			ProductLang defaultLang = new ProductLang();
+			defaultLang.setProductLangPK(product.getId(), LanguageCode.fr);
+			defaultLang.setName("undefined");
+			defaultLang.setDescription("undefined");
+			defaultLang.setSummary("undefined");
+			defaultLang.setProduct(product);
+			product.getProductLangs().add(defaultLang);
+		}
+		else
+		{
+			data.getProductLangs().stream()
+			.map(langMapper::toEntity)
+			.forEach(o -> {
+				o.setProductLangPK(null, LanguageCode.fr);
+				o.setProduct(product);
+				product.getProductLangs().add(o);
+			});
+		}
+		
+		pricingMapper.unwrap(data.getPricing(), product);
+		stockMapper.toEntity(data.getStock(), product);
+		
 
+		// PERSIST PRODUCT
+		product.persist();
+		
 		return mapper.wrapComposite(product);
 	}
 
